--- a/administrador.html
+++ b/administrador.html
@@ -18,7 +18,7 @@
                     <img src="img/logo.png" class="nav-link dropdown-toggle img-fluid" height="80px"
                                     width="80px" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
                                     aria-expanded="false"></img>
-                    <a class="navbar-brand" href="#">Miniso Online</a>
+                    <a class="navbar-brand" href="index.html">Miniso Online</a>
                     <a class="navbar-brand" href="agregarProducto.html">Agregar producto</a>
                     <a class="navbar-brand" href="productos.html">Lista de productos</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -26,36 +26,18 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item dropdown">
-                                <img src="img/buy.png" class="nav-link dropdown-toggle img-fluid" height="50px"
-                                    width="50px" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-                                    aria-expanded="false"></img>
-                                <div id="carrito" class="dropdown-menu" aria-labelledby="navbarCollapse">
-                                    <table id="lista-carrito" class="table">
-                                        <thead>
-                                            <tr>
-                                                <th>Imagen</th>
-                                                <th>Nombre</th>
-                                                <th>Precio</th>
-                                                <th></th>
-                                            </tr>
-                                        </thead>
-                                        <tbody></tbody>
-                                    </table>
-
-                                    <a href="#" id="vaciar-carrito" class="btn btn-primary btn-block">Vaciar Carrito</a>
-                                    <a href="#" id="procesar-pedido" class="btn btn-danger btn-block">Procesar
-                                        Compra</a>
-                                </div>
-                            </li>
-                        </ul>
                     </div>
+                    <a class="navbar-brand" id="is" href="login.html">Iniciar Sesión</a>
+                    
                 </nav>
             </div>
         </div>
     </header>
     
 </body>
+
+<script src="js/admin.js"></script>
+
+
 
 </html>
