--- a/agregarProducto.html
+++ b/agregarProducto.html
@@ -12,6 +12,34 @@
 </head>
 <body>
 
+    <header>
+        <div class="container">
+            <div class="row align-items-stretch justify-content-between">
+                <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+                    <img src="img/logo.png" class="nav-link dropdown-toggle img-fluid" height="80px"
+                                    width="80px" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="false"></img>
+                    <a class="navbar-brand" href="administrador.html">Miniso Online</a>
+                    <a class="navbar-brand" href="agregarProducto.html">Agregar producto</a>
+                    <a class="navbar-brand" href="productos.html">Lista de productos</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarCollapse">
+                    </div>
+                    <a class="navbar-brand" id="is" href="login.html">Iniciar Sesión</a>
+                    
+                </nav>
+            </div>
+        </div>
+    </header>
+    
+    <br>
+    <br>
+    <br>
+    <br>
+
     <div>
         <h1>Registro de producto</h1>
         <br>
@@ -23,6 +51,7 @@
         <br>
         <button onclick="getImagenes()" class="btn btn-primary">Registrar</button>
     </div>
+
    
 
    
