--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script src="js/popper.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/sweetalert2.min.css">
-    <title>Miniso Onlineeee | Papelería</title>
-   
-</head>
 
+    <title>Miniso</title>
+</head>
 <body>
 
     <header>
@@ -22,55 +18,23 @@
                     <img src="img/logo.png" class="nav-link dropdown-toggle img-fluid" height="80px"
                                     width="80px" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
                                     aria-expanded="false"></img>
-                    <a class="navbar-brand" href="#">Miniso Online</a>
+                    <a class="navbar-brand" href="index.html">Miniso Online</a>
+                    <a class="navbar-brand" href="carrito.html">Carrito</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item dropdown">
-                                <img src="img/buy.png" class="nav-link dropdown-toggle img-fluid" height="50px"
-                                    width="50px" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-                                    aria-expanded="false"></img>
-                                <div id="carrito" class="dropdown-menu" aria-labelledby="navbarCollapse">
-                                    <table id="lista-carrito" class="table">
-                                        <thead>
-                                            <tr>
-                                                <th>Imagen</th>
-                                                <th>Nombre</th>
-                                                <th>Precio</th>
-                                                <th></th>
-                                            </tr>
-                                        </thead>
-                                        <tbody></tbody>
-                                    </table>
-
-                                    <a href="#" id="vaciar-carrito" class="btn btn-primary btn-block">Vaciar Carrito</a>
-                                    <a href="#" id="procesar-pedido" class="btn btn-danger btn-block">Procesar
-                                        Compra</a>
-                                </div>
-                            </li>
-                        </ul>
-                        <a class="navbar-brand" href="login.html">Iniciar Sesión</a>
-
                     </div>
+                    <a class="navbar-brand" id="is" href="login.html">Iniciar Sesión</a>
+                    
                 </nav>
             </div>
         </div>
     </header>
-<main>
-    <div id="listaProductos"></div>
-</main>
+
+    <div id="capa"></div>
     
-
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/sweetalert2.min.js"></script>
-    <script src="js/carrito.js"></script>
-    <script src="js/pedido.js"></script>
-    <script src="js/index.js"></script>
-
 </body>
-
+<script src="js/productos.js"></script>
 </html>
