--- a/login.html
+++ b/login.html
@@ -11,6 +11,32 @@
 </head>
 <body>
 <div>
+
+    <header>
+        <div class="container">
+            <div class="row align-items-stretch justify-content-between">
+                <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+                    <img src="img/logo.png" class="nav-link dropdown-toggle img-fluid" height="80px"
+                                    width="80px" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="false"></img>
+                    <a class="navbar-brand" href="index.html">Miniso Online</a>
+                    <a class="navbar-brand" href="carrito.html">Carrito</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarCollapse">
+                    </div>
+                    <a class="navbar-brand" href="login.html">Iniciar Sesión</a>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <br>
+    <br>
+    <br>
+
+
     <h1>Inicia sesión</h1>
 Correo <input type="text" id="correo" class="form-control"><br><br>
 Contraseña <input type="password" id="password" class="form-control"><br><br>
